0MQ version 4.1.3 stable, released on 2015/xx/xx
================================================

* Fixed validation of IPv6 addresses with brackets

0MQ version 4.1.2 stable, released on 2015/06/15
================================================

* Added explicit reference to static link exception in every source file.

* Bumped ABI version to 5:0:0 since 4.1.x changed the ABI.

* Fixed STDINT event interface macros to work with CZMQ 3.0.

* Fixed installation of man pages when BUILD_DOC is not set.

* Fixed #1428 - regression on single-socket proxies.


0MQ version 4.1.1 stable, released on 2015/06/02
================================================

* Fixed #1208 - fix recursion in automake packaging.

* Fixed #1224 - crash when processing empty unsubscribe message.

* Fixed #1213 - properties files were missing from source packages.

* Fixed #1273 - V3 protocol handler vulnerable to downgrade attacks.

* Fixed #1347 - lack way to get peer address.

* Fixed #1362 - SUB socket sometimes fails to resubscribe properly.

* Fixed #1377, #1144 - failed with WSANOTINITIALISED in some cases.

* Fixed #1389 - PUB, PUSH sockets had slow memory leak.

* Fixed #1382 - zmq_proxy did not terminate if there were no readers.


0MQ version 4.1.0 rc1, released on 2014/10/14
=============================================

* All issues that were fixed in 4.0.x

* Improved client reconnection strategy on errors

* GSSAPI security mechanism

* SOCKS5 support (ZMQ_SOCKS_PROXY)

* ZMQ_ROUTER_HANDOVER

* ZMQ_TOS

* ZMQ_CONNECT_RID

* ZMQ_HANDSHAKE_IVL

* ZMQ_IDENTITY_FD

* ZMQ_XPUB_NODROP

* ZMQ_SRCFD and ZMQ_SHARED message options

* Message metadata -- zmq_msg_gets ()

* Probe library configuration -- zmq_has ()


0MQ version 4.0.5 stable, released on 2014/10/14
================================================

* Fixed #1191; CURVE mechanism does not verify short term nonces.

* Fixed #1190; stream_engine is vulnerable to downgrade attacks.
