@@ -56,6 +56,7 @@ if(NOT WIN32)
           test_proxy
           test_proxy_single_socket
           test_proxy_terminate
+          test_getsockopt_memset
           test_filter_ipc
   )
   if(HAVE_FORK)
